All errors now returns Json with message property README sample for apiToken changed Fix all openapi docs
